--- a/Week6/Day5/DailyChallenge/style.css
+++ b/Week6/Day5/DailyChallenge/style.css
@@ -2,6 +2,7 @@ body {
   background: repeating-linear-gradient(45deg, #738dcf 5%, #356fc5 15%, #7b7e93 20%, lightblue 25%);
   text-align: center;
   font-family: 'Rubik Puddles', cursive;
+  height: 100vh;
 }
 table {
   border-collapse: collapse;
